--- a/Zenspace/Zenspace/SearchPodViewController.xib
+++ b/Zenspace/Zenspace/SearchPodViewController.xib
@@ -27,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" id="2Jh-rw-Ws7">
-                    <rect key="frame" x="0.0" y="0.0" width="1024" height="100"/>
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="150"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blue-white.png" id="kdn-q5-KiC">
@@ -43,9 +43,9 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="3ig-19-ygF">
-                            <rect key="frame" x="31" y="39" width="62" height="22"/>
+                            <rect key="frame" x="54" y="42" width="16" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="   Back" image="arrow-copy-7.png" backgroundImage="  ">
+                            <state key="normal" image="arrow-copy-7.png" backgroundImage="  ">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -53,7 +53,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.56956523660000002" green="0.71013736719999998" blue="0.96081060169999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" red="0.23288005590438843" green="0.3675675094127655" blue="0.80396109819412231" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many people are in your meeting?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2nv-vl-hzt">
                     <rect key="frame" x="122" y="162" width="397" height="30"/>
@@ -115,7 +115,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.96092528104782104" green="0.96852117776870728" blue="0.97646421194076538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="132.58928571428572"/>
